--- a/shiureyJs/dom/aplikeshn/index.html
+++ b/shiureyJs/dom/aplikeshn/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="db">
             <button class="add"><h1>add</h1></button>
-            <button class="Performed"><h1>Performed</h1></button>
+            <button class="Performed"><h1>Show Done</h1></button>
         </div>
         <div class="dms">
         </div>
